fix: home route, scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+body::-webkit-scrollbar {
+  display: none;
+}
+
 h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 400; /* Regular */
@@ -76,8 +80,16 @@ section {
   transform: scale(1.15);
   opacity: 1;
   background: #ff9966; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #ff5e62, #ff9966); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #ff5e62, #ff9966); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #ff5e62,
+    #ff9966
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #ff5e62,
+    #ff9966
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #0f0f0f;
 }
 .slider-card {
